refactor: move dependent test cases from place to place